# tristulastore

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
account/: admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_user_details_remove_card_user_delete_address_and_more.py  0003_user_details_first_name_user_details_last_name_and_more.py  0004_remove_user_details_apartment_and_more.py  0005_alter_user_address_options_alter_user_card_options.py
account/templates/account/: account.html  login.html  registration.html
jstools/: package.json
static/tristulastore/: style.css
store/: admin.py  forms.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_remove_product_photos_product_photo_and_more.py  0003_alter_product_sale_price.py  0004_order.py  0005_rename_addressid_order_address_and_more.py  0006_remove_order_address_remove_order_card_order_comment.py  0007_remove_order_comment.py  0008_event_feedback.py  0009_alter_order_product_options.py
store/templates/store/: cart.html  catalog.html  contacts.html  events.html  feedback.html  index.html
templates/: base.html  footer.html  navbar.html
tristulastore/: asgi.py  settings.py  urls.py  wsgi.py
tristulastore/static/tristulastore/: style.min.css
