[tool.poetry]
name = "TriStulaStore"
version = "0.1.0"
description = ""
authors = ["Ivan Nikolaev-Axenov <nikolaevaxenov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
whitenoise = "^6.0.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
django-tailwind = "^3.1.1"
Pillow = "^9.0.1"
docutils = "^0.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
